force-app/main/default/objects/Compartilhamento_do_processo__c/Compartilhamento_do_processo__c.object-meta.xml
<CustomObject>
    <label>Compartilhamento do processo</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compartilhamentos do processo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>