force-app/main/default/objects/Compartilhamento_do_processo__c/fields/Processo_Judicial__c.field-meta.xml
<CustomField>
    <fullName>Processo_Judicial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processo Judicial</label>
    <referenceTo>Processo_Judicial__c</referenceTo>
    <relationshipLabel>Compartilhamentos do processo</relationshipLabel>
    <relationshipName>Compartilhamentos_do_processo</relationshipName>
    <type>Lookup</type>
</CustomField>