force-app/main/default/objects/Compartilhamento_do_processo__c/fields/Tipo_de_acesso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_acesso__c</fullName>
    <label>Tipo de acesso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leitura/Gravação</fullName>
            </value>
            <value>
                <fullName>Somente leitura</fullName>
                <default>true</default>
                <label>Somente leitura</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>