force-app/main/default/objects/Compartilhamento_do_processo__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compartilhamentos_do_processo</relationshipName>
    <type>Lookup</type>
</CustomField>